cambiando titulo y portada

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="#">Inicio</a>
                 <a class="dropdown-item gris02" href="procedimientos/nosotros.html">Nosotros</a> 
-                <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="procedimientos/cronograma-academico.html">Cronograma académico</a>
+                <a class="dropdown-item gris02" href="procedimientos/documentos-academicos.html">Documentos Académicos</a> 
+                <a class="dropdown-item gris02" href="procedimientos/cronograma-academico.html">Cronograma Académico</a>
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -132,7 +132,7 @@
                 class="nav-link my-menu"
                 href="procedimientos/gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
@@ -182,21 +182,21 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img
-                    src="images/unsa1.jpg"
+                    src="./images/portada2.jpg"
                     class="d-block w-100"
                     alt="imagen de portada"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/unsa2.jpg"
+                    src="./images/portada1.jpg"
                     class="d-block w-100"
                     alt="imagen de portada"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
-                    src="images/unsa5.jpg"
+                    src="./images/portada3.jpg"
                     class="d-block w-100"
                     alt="imagen de portada"
                   />
@@ -280,7 +280,7 @@
         </div>
       </div>
       <!-- FOOTER -->
-      <div class="row footer">
+      <div class="row footer align-items-center">
         <div class="col-sm-5 col-md-3 col-lg-4 ">
           <h3 class="contacto"><strong> CONTACTO</strong></h3>
           <p>
@@ -311,12 +311,7 @@
       </div>
       <!-- CREDITOS -->
       <div class="row">
-        <div class="col-md-6 creditos">
-          Visitas:            
-            <a href="#" title="contador de visitas web"><img src="https://counter3.stat.ovh/private/contadorvisitasgratis.php?c=2fc4se53zsmuhc263uxqrs4zdmnguuzd" border="0" title="contador de visitas web" alt="contador de visitas web"></a>
-
-        </div>
-        <div class="col-md-6 text-right creditos">
+        <div class="col-md-12 text-right creditos">
           Universidad Nacional de San Agustin de Arequipa | 2020
         </div>
       </div>
