--- a/procedimientos/consultas.html
+++ b/procedimientos/consultas.html
@@ -94,8 +94,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
-                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>  
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>  
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -121,7 +121,7 @@
                 class="nav-link my-menu"
                 href="gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
@@ -158,7 +158,7 @@
       </div>
       <!-- MAIN- PREGUNTAS -->
       <div class="principal">
-        <h2 class="title-section" >PREGUNTAS FRECUENTES</h2>
+        <h2 class="title-section">PREGUNTAS FRECUENTES</h2>
         <ul class="row" id="preg-frec">
             <li>
                 <h3 class="col-12">¿Cuánto tiempo está vigente el pago de no adeudar bienes o material bibliográfico de la universidad?</h3>
