--- a/procedimientos/cronograma-academico.html
+++ b/procedimientos/cronograma-academico.html
@@ -130,8 +130,8 @@
                 <a class="dropdown-item gris02" href="nosotros.html"
                   >Nosotros</a>
 
-                  <a class="dropdown-item gris02" href="./documentos-academicos.html">Documentos académicos</a> 
-                  <a class="dropdown-item gris02" href="#">Cronograma académico</a>
+                  <a class="dropdown-item gris02" href="./documentos-academicos.html">Documentos Académicos</a> 
+                  <a class="dropdown-item gris02" href="#">Cronograma Académico</a>
               </div>
 
             </li>
@@ -154,7 +154,7 @@
             <li class="nav-item my-menu-hover">
               <a class="nav-link my-menu" href="gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
@@ -188,7 +188,7 @@
         </div>
       </div>
       <!-- MAIN- PREGUNTAS -->
-      <div class="principal">
+      <div class="cronograma-academico">
         <div class="row">
           <div class="col-12 img-wid">
             <img
