--- a/procedimientos/documentos-academicos.html
+++ b/procedimientos/documentos-academicos.html
@@ -129,8 +129,8 @@
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
 
-                <a class="dropdown-item gris02" href="#">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>
+                <a class="dropdown-item gris02" href="#">Documentos Académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -152,7 +152,7 @@
             <li class="nav-item my-menu-hover">
               <a class="nav-link my-menu" href="gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
