--- a/procedimientos/gestCertificaciones.html
+++ b/procedimientos/gestCertificaciones.html
@@ -50,8 +50,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                     <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>  
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>  
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -65,7 +65,7 @@
                   <a class="nav-link my-menu" href="GestMatricula.html">Gestión <br>Matricula</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
-                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br> registro de notas</a>
+                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br> Registro de Notas</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
                   <a class="nav-link my-menu" href="#">Gestión <br>Certificaciones</a>
@@ -87,13 +87,13 @@
               <div class="row">
                 <div class="col-12 col-md-3 my-4">
                   <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-gct-uno-tab" data-toggle="pill" href="#v-pills-gct-uno" role="tab" aria-controls="v-pills-gct-uno" aria-selected="true">Libreta de notas</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-dos-tab" data-toggle="pill" href="#v-pills-gct-dos" role="tab" aria-controls="v-pills-gct-dos" aria-selected="false">Constancia de egresado</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-tres-tab" data-toggle="pill" href="#v-pills-gct-tres" role="tab" aria-controls="v-pills-gct-tres" aria-selected="false">Certificado de estudios</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-cuatro-tab" data-toggle="pill" href="#v-pills-gct-cuatro" role="tab" aria-controls="v-pills-gct-cuatro" aria-selected="false">Constancia de ranking</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-cinco-tab" data-toggle="pill" href="#v-pills-gct-cinco" role="tab" aria-controls="v-pills-gct-cinco" aria-selected="false">Constancia de no adeudo a la Universidad</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-sexto-tab" data-toggle="pill" href="#v-pills-gct-sexto" role="tab" aria-controls="v-pills-gct-sexto" aria-selected="false">Constancia de biblioteca</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-siete-tab" data-toggle="pill" href="#v-pills-gct-siete" role="tab" aria-controls="v-pills-gct-siete" aria-selected="false">Constancia de primera matrícula</a>
+                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-gct-uno-tab" data-toggle="pill" href="#v-pills-gct-uno" role="tab" aria-controls="v-pills-gct-uno" aria-selected="true">Libreta de Notas</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-dos-tab" data-toggle="pill" href="#v-pills-gct-dos" role="tab" aria-controls="v-pills-gct-dos" aria-selected="false">Constancia de Egresado</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-tres-tab" data-toggle="pill" href="#v-pills-gct-tres" role="tab" aria-controls="v-pills-gct-tres" aria-selected="false">Certificado de Estudios</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-cuatro-tab" data-toggle="pill" href="#v-pills-gct-cuatro" role="tab" aria-controls="v-pills-gct-cuatro" aria-selected="false">Constancia de Ranking</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-cinco-tab" data-toggle="pill" href="#v-pills-gct-cinco" role="tab" aria-controls="v-pills-gct-cinco" aria-selected="false">Constancia de no Adeudo a la Universidad</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-sexto-tab" data-toggle="pill" href="#v-pills-gct-sexto" role="tab" aria-controls="v-pills-gct-sexto" aria-selected="false">Constancia de Biblioteca</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gct-siete-tab" data-toggle="pill" href="#v-pills-gct-siete" role="tab" aria-controls="v-pills-gct-siete" aria-selected="false">Constancia de Primera Matrícula</a>
                 </div>
                 </div>
                 <!-- CONTENIDO MENU VERTICAL -->
@@ -107,7 +107,7 @@
                       <div class="tab-pane fade active show" id="v-pills-gct-uno" role="tabpanel" aria-labelledby="v-pills-gct-uno-tab">
                         <div class="row my-2 style-pill">
                           <!-- <h3 class="title-section">PROCEDIMIENTOS</h3><br> -->
-                          <h4 class="subtitulo">Libreta de notas</h4>
+                          <h4 class="subtitulo">Libreta de Notas</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -130,7 +130,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gct-dos" role="tabpanel" aria-labelledby="v-pills-gct-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Constancia de egresado</h4>
+                          <h4 class="subtitulo">Constancia de Egresado</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -152,7 +152,7 @@
                       <!-- TERCER CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gct-tres" role="tabpanel" aria-labelledby="v-pills-gct-tres-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Certificado de estudios</h4> 
+                          <h4 class="subtitulo">Certificado de Estudios</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -175,7 +175,7 @@
                       <!-- CUARTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gct-cuatro" role="tabpanel" aria-labelledby="v-pills-gct-cuatro-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Constancia de ranking</h4> 
+                          <h4 class="subtitulo">Constancia de Ranking</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -198,7 +198,7 @@
                       <!-- QUINTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gct-cinco" role="tabpanel" aria-labelledby="v-pills-gct-cinco-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Constancia de no adeudo a la Universidad</h4> 
+                          <h4 class="subtitulo">Constancia de no Adeudo a la Universidad</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -221,7 +221,7 @@
                       <!-- SEXTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gct-sexto" role="tabpanel" aria-labelledby="v-pills-gct-sexto-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Constancia de biblioteca</h4> 
+                          <h4 class="subtitulo">Constancia de Biblioteca</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -244,7 +244,7 @@
                       <!-- SEPTIMO -->
                       <div class="tab-pane fade" id="v-pills-gct-siete" role="tabpanel" aria-labelledby="v-pills-gct-siete-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Constancia de primera matrícula</h4> 
+                          <h4 class="subtitulo">Constancia de Primera Matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
