--- a/procedimientos/gestCurricular.html
+++ b/procedimientos/gestCurricular.html
@@ -50,8 +50,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                     <a class="dropdown-item gris02" href="#">Nosotros</a>
-                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -65,7 +65,7 @@
                   <a class="nav-link my-menu" href="GestMatricula.html">Gestión <br> Matrícula</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
-                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br>registro de notas</a>
+                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br>Registro de Notas</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
                   <a class="nav-link my-menu" href="gestCertificaciones.html">Gestión<br>Cerfiticaciones</a>
@@ -149,7 +149,7 @@
                       <!-- TERCER CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gc-tres" role="tabpanel" aria-labelledby="v-pills-gc-tres-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Asignación de labor lectiva</h4> 
+                          <h4 class="subtitulo">Asignación de Labor Lectiva</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -172,7 +172,7 @@
                       <!-- CUARTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gc-cuatro" role="tabpanel" aria-labelledby="v-pills-gc-cuatro-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Registro de silabo y pesos ponderados</h4> 
+                          <h4 class="subtitulo">Registro de Sílabo y pesos Ponderados</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -184,7 +184,7 @@
                             <div class="card" style="width: 18rem;">
                               <div class="card-body">
                                 <h5>FORMATO</h5>
-                                <p>FORMATO PARA SILABOS</p>
+                                <p>FORMATO PARA SÍLABOS</p>
                                 <a href="../formatos/Formato para silabos.pdf" class="card-link" target="_blank">Ver/Descargar</a>
                               </div>
                             </div>
