--- a/procedimientos/gestRegistroNotas.html
+++ b/procedimientos/gestRegistroNotas.html
@@ -50,8 +50,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                     <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -65,7 +65,7 @@
                   <a class="nav-link my-menu" href="GestMatricula.html">Gestión <br> Matrícula</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
-                  <a class="nav-link my-menu" href="#">Gestión <br>registro de notas</a>
+                  <a class="nav-link my-menu" href="#">Gestión <br>Registro de Notas</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
                   <a class="nav-link my-menu" href="gestCertificaciones.html">Gestión<br>Cerfiticaciones</a>
@@ -87,10 +87,10 @@
               <div class="row">
                 <div class="col-12 col-md-3 my-4">
                   <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-grn-uno-tab" data-toggle="pill" href="#v-pills-grn-uno" role="tab" aria-controls="v-pills-grn-uno" aria-selected="true">Registro de notas</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-dos-tab" data-toggle="pill" href="#v-pills-grn-dos" role="tab" aria-controls="v-pills-grn-dos" aria-selected="false">Trámite de examen rezagado</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-tres-tab" data-toggle="pill" href="#v-pills-grn-tres" role="tab" aria-controls="v-pills-grn-tres" aria-selected="false">Modificación de notas</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-cuatro-tab" data-toggle="pill" href="#v-pills-grn-cuatro" role="tab" aria-controls="v-pills-grn-cuatro" aria-selected="false">Generación de actas de Notas</a>
+                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-grn-uno-tab" data-toggle="pill" href="#v-pills-grn-uno" role="tab" aria-controls="v-pills-grn-uno" aria-selected="true">Registro de Notas</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-dos-tab" data-toggle="pill" href="#v-pills-grn-dos" role="tab" aria-controls="v-pills-grn-dos" aria-selected="false">Trámite de Examen Rezagado</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-tres-tab" data-toggle="pill" href="#v-pills-grn-tres" role="tab" aria-controls="v-pills-grn-tres" aria-selected="false">Modificación de Notas</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-grn-cuatro-tab" data-toggle="pill" href="#v-pills-grn-cuatro" role="tab" aria-controls="v-pills-grn-cuatro" aria-selected="false">Generación de Actas de Notas</a>
                   </div>
                 </div>
                 <!-- CONTENIDO MENU VERTICAL -->
@@ -104,7 +104,7 @@
                       <div class="tab-pane fade active show" id="v-pills-grn-uno" role="tabpanel" aria-labelledby="v-pills-grn-uno-tab">
                         <div class="row my-2 style-pill">
                           <!-- <h3 class="title-section">PROCEDIMIENTOS</h3><br> -->
-                          <h4 class="subtitulo">Registro de notas</h4>
+                          <h4 class="subtitulo">Registro de Notas</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -127,7 +127,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-grn-dos" role="tabpanel" aria-labelledby="v-pills-grn-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Trámite de examen rezagado</h4>
+                          <h4 class="subtitulo">Trámite de Examen Rezagado</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -149,7 +149,7 @@
                       <!-- TERCER CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-grn-tres" role="tabpanel" aria-labelledby="v-pills-grn-tres-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Modificación de notas</h4> 
+                          <h4 class="subtitulo">Modificación de Notas</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
