--- a/procedimientos/nosotros.html
+++ b/procedimientos/nosotros.html
@@ -106,8 +106,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="#">Nosotros</a>
-                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a> 
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a> 
               </div>
             </li>
             <li class="nav-item my-menu-hover">
@@ -137,7 +137,7 @@
                 class="nav-link my-menu"
                 href="../procedimientos/gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
@@ -173,7 +173,7 @@
         </div>
       </div>
       <!-- MAIN -->
-        <div class="container">
+        <div class="principal">
           <div class="row justify-content-center">
             <div class="col">
               <img src="../images/banner.jpg" class="img-fluid banner" alt="Responsive image">
@@ -204,8 +204,8 @@
                 </div>
           </div>
           <div class="row nosotros">
-            <div class="col-lg-6 col-md-6 col-sm-12 ">
-              <img src="../images/banner3.jpg" class="img-fluid mb-5" alt="universidad">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <img src="../images/resena.jpg" class="img-fluid mb-5" alt="universidad">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12  nosotros">
               <h4 id="resena-historica">Reseña Histórica</h4>
