--- a/procedimientos/organizacion.html
+++ b/procedimientos/organizacion.html
@@ -94,8 +94,8 @@
               <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                 <a class="dropdown-item gris02" href="nosotros.html">Nosotros</a>
-                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a> 
+                <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a> 
   
               </div>
             </li>
@@ -122,7 +122,7 @@
                 class="nav-link my-menu"
                 href="gestRegistroNotas.html"
                 >Gestión <br />
-                Registro de notas</a
+                Registro de Notas</a
               >
             </li>
             <li class="nav-item my-menu-hover">
