--- a/procedimientos/GestMatricula.html
+++ b/procedimientos/GestMatricula.html
@@ -50,8 +50,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                     <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -65,7 +65,7 @@
                   <a class="nav-link my-menu" href="#">Gestión <br>Matrícula</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
-                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br>registro de notas</a>
+                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión <br>Registro de Notas</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
                   <a class="nav-link my-menu" href="gestCertificaciones.html">Gestión<br>Certificaciones</a>
@@ -87,18 +87,18 @@
               <div class="row">
                 <div class="col-12 col-md-3 my-4">
                   <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-gm-uno-tab" data-toggle="pill" href="#v-pills-gm-uno" role="tab" aria-controls="v-pills-gm-uno" aria-selected="true">Regularización de expedientes de ingresantes</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-dos-tab" data-toggle="pill" href="#v-pills-gm-dos" role="tab" aria-controls="v-pills-gm-dos" aria-selected="false">Reactualización de matrícula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-tres-tab" data-toggle="pill" href="#v-pills-gm-tres" role="tab" aria-controls="v-pills-gm-tres" aria-selected="false">Reserva de matrícula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cuatro-tab" data-toggle="pill" href="#v-pills-gm-cuatro" role="tab" aria-controls="v-pills-gm-cuatro" aria-selected="false">Matrícula regular</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cinco-tab" data-toggle="pill" href="#v-pills-gm-cinco" role="tab" aria-controls="v-pills-gm-cinco" aria-selected="false">Matrícula por excepción</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-seis-tab" data-toggle="pill" href="#v-pills-gm-seis" role="tab" aria-controls="v-pills-gm-seis" aria-selected="false">Retiro de matrícula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-siete-tab" data-toggle="pill" href="#v-pills-gm-siete" role="tab" aria-controls="v-pills-gm-siete" aria-selected="false">Anulación de matrícula</a>
+                    <a class="nav-link style-mv-color my-1 active show" id="v-pills-gm-uno-tab" data-toggle="pill" href="#v-pills-gm-uno" role="tab" aria-controls="v-pills-gm-uno" aria-selected="true">Regularización de Expedientes de Ingresantes</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-dos-tab" data-toggle="pill" href="#v-pills-gm-dos" role="tab" aria-controls="v-pills-gm-dos" aria-selected="false">Reactualización de Matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-tres-tab" data-toggle="pill" href="#v-pills-gm-tres" role="tab" aria-controls="v-pills-gm-tres" aria-selected="false">Reserva de Matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cuatro-tab" data-toggle="pill" href="#v-pills-gm-cuatro" role="tab" aria-controls="v-pills-gm-cuatro" aria-selected="false">Matrícula Regular</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-cinco-tab" data-toggle="pill" href="#v-pills-gm-cinco" role="tab" aria-controls="v-pills-gm-cinco" aria-selected="false">Matrícula por Excepción</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-seis-tab" data-toggle="pill" href="#v-pills-gm-seis" role="tab" aria-controls="v-pills-gm-seis" aria-selected="false">Retiro de Matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-siete-tab" data-toggle="pill" href="#v-pills-gm-siete" role="tab" aria-controls="v-pills-gm-siete" aria-selected="false">Anulación de Matrícula</a>
                     <a class="nav-link style-mv-color my-1" id="v-pills-gm-ocho-tab" data-toggle="pill" href="#v-pills-gm-ocho" role="tab" aria-controls="v-pills-gm-ocho" aria-selected="false">Convalidaciones</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-nueve-tab" data-toggle="pill" href="#v-pills-gm-nueve" role="tab" aria-controls="v-pills-gm-nueve" aria-selected="false">Evaluación por jurado</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-diez-tab" data-toggle="pill" href="#v-pills-gm-diez" role="tab" aria-controls="v-pills-gm-diez" aria-selected="false">Consolidado de matrícula</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-once-tab" data-toggle="pill" href="#v-pills-gm-once" role="tab" aria-controls="v-pills-gm-once" aria-selected="false">Retiro excepcional</a>
-                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-doce-tab" data-toggle="pill" href="#v-pills-gm-doce" role="tab" aria-controls="v-pills-gm-doce" aria-selected="false">Carne universitario</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-nueve-tab" data-toggle="pill" href="#v-pills-gm-nueve" role="tab" aria-controls="v-pills-gm-nueve" aria-selected="false">Evaluación por Jurado</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-diez-tab" data-toggle="pill" href="#v-pills-gm-diez" role="tab" aria-controls="v-pills-gm-diez" aria-selected="false">Consolidado de Matrícula</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-once-tab" data-toggle="pill" href="#v-pills-gm-once" role="tab" aria-controls="v-pills-gm-once" aria-selected="false">Retiro Excepcional</a>
+                    <a class="nav-link style-mv-color my-1" id="v-pills-gm-doce-tab" data-toggle="pill" href="#v-pills-gm-doce" role="tab" aria-controls="v-pills-gm-doce" aria-selected="false">Carne Universitario</a>
                 </div>
                 </div>
                 <!-- CONTENIDO MENU VERTICAL -->
@@ -112,7 +112,7 @@
                       <div class="tab-pane fade active show" id="v-pills-gm-uno" role="tabpanel" aria-labelledby="v-pills-gm-uno-tab">
                         <div class="row my-2 style-pill">
                           <!-- <h3 class="title-section">PROCEDIMIENTOS</h3><br> -->
-                          <h4 class="subtitulo">Regularización de expedientes de ingresantes</h4>
+                          <h4 class="subtitulo">Regularización de Expedientes de Ingresantes</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -135,7 +135,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-dos" role="tabpanel" aria-labelledby="v-pills-gm-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Reactualización de matrícula</h4>
+                          <h4 class="subtitulo">Reactualización de Matrícula</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -157,7 +157,7 @@
                       <!-- TERCER CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-tres" role="tabpanel" aria-labelledby="v-pills-gm-tres-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Reserva de matrícula</h4> 
+                          <h4 class="subtitulo">Reserva de Matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -180,7 +180,7 @@
                       <!-- CUARTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-cuatro" role="tabpanel" aria-labelledby="v-pills-gm-cuatro-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Matrícula regular</h4> 
+                          <h4 class="subtitulo">Matrícula Regular</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -202,7 +202,7 @@
                       <!-- QUINTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-cinco" role="tabpanel" aria-labelledby="v-pills-gm-cinco-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Matrícula por excepción</h4> 
+                          <h4 class="subtitulo">Matrícula por Excepción</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -231,7 +231,7 @@
                       <!-- SEXTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gm-seis" role="tabpanel" aria-labelledby="v-pills-gm-seis-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Retiro de matrícula</h4> 
+                          <h4 class="subtitulo">Retiro de Matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -254,7 +254,7 @@
                       <!-- SEPTIMO -->
                       <div class="tab-pane fade" id="v-pills-gm-siete" role="tabpanel" aria-labelledby="v-pills-gm-siete-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Anulación de matrícula</h4> 
+                          <h4 class="subtitulo">Anulación de Matrícula</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -327,7 +327,7 @@
                       <!-- NUEVE -->
                       <div class="tab-pane fade" id="v-pills-gm-nueve" role="tabpanel" aria-labelledby="v-pills-gm-nueve-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Evaluación por jurado</h4> 
+                          <h4 class="subtitulo">Evaluación por Jurado</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -402,7 +402,7 @@
                       <!-- DOCE -->
                       <div class="tab-pane fade" id="v-pills-gm-doce" role="tabpanel" aria-labelledby="v-pills-gm-doce-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Carne universitario</h4> 
+                          <h4 class="subtitulo">Carne Universitario</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
