--- a/procedimientos/gestDocente.html
+++ b/procedimientos/gestDocente.html
@@ -50,8 +50,8 @@
                   <div class="dropdown-menu gris01" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item gris02" href="../index.html">Inicio</a>
                     <a class="dropdown-item gris02" href="./nosotros.html">Nosotros</a>
-                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos académicos</a> 
-                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma académico</a>   
+                    <a class="dropdown-item gris02" href="documentos-academicos.html">Documentos Académicos</a> 
+                    <a class="dropdown-item gris02" href="cronograma-academico.html">Cronograma Académico</a>   
                   </div>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
@@ -65,7 +65,7 @@
                   <a class="nav-link my-menu" href="GestMatricula.html">Gestión <br>Matrícula</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
-                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión<br>registro de notas</a>
+                  <a class="nav-link my-menu" href="gestRegistroNotas.html">Gestión<br>Registro de Notas</a>
                 </li>
                 <li class="nav-item my-menu-hover d-flex align-items-center justify-content-center">
                   <a class="nav-link my-menu" href="gestCertificaciones.html">Gestión <br>Certificaciones</a>
@@ -127,7 +127,7 @@
                       <!-- SEGUNDO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gd-dos" role="tabpanel" aria-labelledby="v-pills-gd-dos-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Formato de Carga lectiva y no lectiva</h4>
+                          <h4 class="subtitulo">Formato de Carga Lectiva y no Lectiva</h4>
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
@@ -237,7 +237,7 @@
                       <!-- SEXTO CONTENEDOR -->
                       <div class="tab-pane fade" id="v-pills-gd-sexto" role="tabpanel" aria-labelledby="v-pills-gd-sexto-tab">
                         <div class="row my-2 style-pill">
-                          <h4 class="subtitulo">Encuesta de evaluación Docente</h4> 
+                          <h4 class="subtitulo">Encuesta de Evaluación Docente</h4> 
                         </div>
                         <div class="row my-2 style-pill">
                           <div class="col-12 col-lg-8 img-regl">
